apps/openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
spec:
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: openwebui
  namespace: openwebui
subsets:
  - addresses:
      - ip: 10.100.20.18
    ports:
      - port: 3001
