apps/openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui-ingress
  namespace: openwebui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: zoidberg.amer.dev,bot.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - zoidberg.amer.dev
      secretName: zoidberg-amer-dev-tls
    - hosts:
        - bot.amer.dev
      secretName: bot-amer-dev-tls
  rules:
    - host: zoidberg.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  number: 3001
    - host: bot.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  number: 3001
